style: standardize color codes and update result label IDs in popup CSS

--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -13,12 +13,12 @@ body {
   margin-left: 0px;
   margin-right: 0px;
   border: none;
-  background-color: #181C14;
+  background-color: #181c14;
   font-family: 'NanumBarunpenR', sans-serif;
 }
 
 #main {
-  width: 100%; 
+  width: 100%;
   height: 100%;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
@@ -28,7 +28,7 @@ body {
 }
 
 #setting {
-  width: 100%; 
+  width: 100%;
   height: 100%;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
@@ -36,7 +36,6 @@ body {
   justify-items: center;
   align-items: center;
 }
-
 
 @keyframes spin {
   0% {
@@ -63,7 +62,7 @@ body {
 }
 
 .button:hover {
-  background: #ECDFCC;
+  background: #ecdfcc;
 }
 
 .button img {
@@ -95,21 +94,31 @@ body {
 }
 
 .infoLabel {
-  color: #ECDFCC;
+  color: #ecdfcc;
   font-size: 15px;
 }
 
-#result_1 {
+#resultLabel1 {
   grid-row: 2 / 3;
   grid-column: 1 / 6;
 }
 
-#result_2 {
+#resultLabel2 {
   grid-row: 3 / 4;
   grid-column: 1 / 6;
 }
 
-#result_3 {
+#resultLabel3 {
   grid-row: 4 / 5;
+  grid-column: 1 / 6;
+}
+
+#inputAgeLabel {
+  grid-row: 2 / 3;
+  grid-column: 1 / 6;
+}
+
+#agePicker {
+  grid-row: 3 / 4;
   grid-column: 1 / 6;
 }
