--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -77,6 +77,21 @@ body {
   width: 100%;
 }
 
+.datePicker {
+  width: 60%;
+  padding: 5px;
+  border: 2px solid #697565;
+  border-radius: 5px;
+  font-size: 11px;
+  color: #181c14;
+  background-color: #ecdfcc;
+  outline: none;
+}
+
+.datePicker:focus {
+  border-color: #efb036;
+}
+
 #settingButton {
   grid-column: 1 / 2;
 }
@@ -97,7 +112,7 @@ body {
   width: 95%;
 }
 
-#datePicker {
+#targetDatePicker {
   grid-column: 2 / 5;
 }
 
@@ -151,16 +166,18 @@ body {
 #examInput {
   grid-row: 3 / 4;
   grid-column: 3 / 6;
+  width: 60%;
   padding: 5px;
-  border: 2px solid #ccc;
+  border: 2px solid #697565;
   border-radius: 5px;
   font-size: 11px;
-  color: #555;
+  color: #181c14;
+  background-color: #ecdfcc;
   outline: none;
 }
 
 #examInput:focus {
-  border-color: #007bff;
+  border-color: #efb036;
 }
 
 #armyPicker {
@@ -176,12 +193,12 @@ body {
   --switch-width: 46px;
   --switch-height: 24px;
   --switch-bg: rgb(131, 131, 131);
-  --switch-checked-bg: rgb(0, 218, 80);
+  --switch-checked-bg: #efb036;
   --switch-offset: calc((var(--switch-height) - var(--circle-diameter)) / 2);
   --switch-transition: all 0.2s cubic-bezier(0.27, 0.2, 0.25, 1.51);
   /* circle */
   --circle-diameter: 18px;
-  --circle-bg: #fff;
+  --circle-bg: #ecdfcc;
   --circle-shadow: 1px 1px 2px rgba(146, 146, 146, 0.45);
   --circle-checked-shadow: -1px 1px 2px rgba(163, 163, 163, 0.45);
   --circle-transition: var(--switch-transition);
