feat: add animations for button hover effects in popup

--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -5,6 +5,26 @@
   font-style: normal;
 }
 
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateX(100%);
+  }
+
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
 html {
   width: 300px;
   height: 200px;
@@ -43,16 +63,6 @@ body {
   grid-template-rows: repeat(5, 1fr);
   justify-items: center;
   align-items: center;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
 }
 
 .button {
@@ -102,6 +112,10 @@ body {
 
 #backButton {
   grid-column: 1 / 2;
+}
+
+#backButton:hover img {
+  animation: slideIn 1s linear infinite;
 }
 
 #calcButton {
